YI-202: white space fixes

--- a/web/themes/custom/yale_infosec/components/02-molecules/cta/_cta.scss
+++ b/web/themes/custom/yale_infosec/components/02-molecules/cta/_cta.scss
@@ -8,6 +8,10 @@
   &--featured {
     margin-bottom: 0;
   }
+
+  .bg:last-child & {
+    margin-bottom: 0;
+  }
 }
 
 .cta__image {
