--- a/web/themes/custom/yale_infosec/components/03-organisms/bg/_bg.scss
+++ b/web/themes/custom/yale_infosec/components/03-organisms/bg/_bg.scss
@@ -5,6 +5,10 @@
     padding: $space-triple 0;
   }
 
+  &:last-child {
+    padding-bottom: 0;
+  }
+
   &--white + .bg--white {
     padding: 0;
   }
