--- a/web/themes/custom/yale_infosec/components/04-templates/_default.scss
+++ b/web/themes/custom/yale_infosec/components/04-templates/_default.scss
@@ -25,7 +25,3 @@
 .main-content__top-inner {
   grid-area: content;
 }
-
-.main-content__bottom {
-  margin-bottom: 4em;
-}
